--- a/wallx.css
+++ b/wallx.css
@@ -8,6 +8,11 @@
     background-color: #716dc4;
 }
 
+.steps{
+    color: rgb(70, 64, 185);
+    background-color: #ffffff;
+}
+
 .wallx-typo{
     color: #ffffff;
 }
